--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/backend": "^2.6.3",
     "@clerk/clerk-sdk-node": "^4.13.23",
+    "@google/genai": "^1.40.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
